chi-squared added

--- a/Monod_demo_new.ipynb
+++ b/Monod_demo_new.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {
     "id": "L8Ax0d2vrdwY"
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,19 +350,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(31649,)\n",
-      "(31649,)\n",
-      "(31649,)\n",
-      "(31649,)\n",
-      "[[False False False ... False False False]\n",
-      " [False False False ... False False False]]\n"
+      "INFO:root:Beginning data preprocessing and filtering.\n",
+      "INFO:root:Batch location ./fits already exists.\n",
+      "INFO:root:Directory ./fits/gg_240725_029_batch_1 created.\n",
+      "INFO:root:Dataset: allen_C01_gaba\n",
+      "INFO:root:728 cells detected.\n",
+      "INFO:root:32285 features observed, 32005 match genome annotations. 31649 were unique.\n",
+      "INFO:root:3576 genes retained after expression filter.\n",
+      "INFO:root:Directory ./fits/gg_240725_029_batch_1/allen_C01_gaba created.\n",
+      "INFO:root:Dataset: allen_C01_glu\n",
+      "INFO:root:6629 cells detected.\n",
+      "INFO:root:32285 features observed, 32005 match genome annotations. 31649 were unique.\n",
+      "INFO:root:5517 genes retained after expression filter.\n",
+      "INFO:root:Directory ./fits/gg_240725_029_batch_1/allen_C01_glu created.\n",
+      "INFO:root:Gene set size according to a 100.0% dataset threshold: 3348\n",
+      "INFO:root:100 random genes selected.\n",
+      "INFO:root:Total of 100 genes selected.\n",
+      "INFO:root:Directory ./fits/gg_240725_029_batch_1/diagnostic_figures created.\n",
+      "INFO:root:Beginning data extraction.\n",
+      "INFO:root:Dataset: allen_C01_gaba\n",
+      "INFO:root:32285 features observed, 32005 match genome annotations. 31649 were unique.\n",
+      "INFO:root:Gene list extracted from ./fits/gg_240725_029_batch_1/genes.csv.\n",
+      "INFO:root:Directory ./fits/gg_240725_029_batch_1/allen_C01_gaba/diagnostic_figures created.\n",
+      "INFO:root:Search data stored to ./fits/gg_240725_029_batch_1/allen_C01_gaba/raw.sd.\n",
+      "INFO:root:Beginning data extraction.\n",
+      "INFO:root:Dataset: allen_C01_glu\n",
+      "INFO:root:32285 features observed, 32005 match genome annotations. 31649 were unique.\n",
+      "INFO:root:Gene list extracted from ./fits/gg_240725_029_batch_1/genes.csv.\n",
+      "INFO:root:Directory ./fits/gg_240725_029_batch_1/allen_C01_glu/diagnostic_figures created.\n",
+      "INFO:root:Search data stored to ./fits/gg_240725_029_batch_1/allen_C01_glu/raw.sd.\n"
      ]
     },
     {
@@ -596,26 +619,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(parameters_per_gene)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 140,
    "metadata": {},
    "outputs": [
@@ -724,7 +727,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reject Genes with Poor Fits"
+    "## Perform Chi-Squared Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # To calculate chi-squared values for each gene, run the following:\n",
+    "# search_result.chisquare_testing(search_data)\n",
+    "# To check stability after rejecting genes, run the following:\n",
+    "search_result.chisq_best_param_correction(search_data, Ntries=0, viz=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display Rejected Genes"
    ]
   },
   {
@@ -747,7 +769,6 @@
    ],
    "source": [
     "# Calculate p values and reject genes.\n",
-    "_=search_result.chisquare_testing(search_data)\n",
     "rejected_gene_indices = search_result.rejected_genes\n",
     "rejected_gene_names = search_result.gene_names[rejected_gene_indices]\n",
     "print(rejected_gene_names)"
@@ -783,8 +804,8 @@
    "outputs": [],
    "source": [
     "def run_qc(j):\n",
-    "    sr = sr_arr[j]\n",
-    "    sd = sd_arr[j]\n",
+    "    sr = search_results[j]\n",
+    "    sd = search_datas[j]\n",
     "    fig1,ax1 = plt.subplots(1,1)\n",
     "    sr.find_sampling_optimum()\n",
     "    sr.plot_landscape(ax1)\n",
@@ -803,7 +824,7 @@
     "    sr.plot_param_L_dep(plot_errorbars=True,plot_fit=True)\n",
     "    sr.plot_param_marg()\n",
     "    analysis.make_batch_analysis_dir([sr],dir_string)\n",
-    "    sr.update_on_disk()\n"
+    "    sr.update_on_disk()"
    ]
   },
   {
