perform_inference works with meK-Means

--- a/Monod_demo_new.ipynb
+++ b/Monod_demo_new.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "id": "L8Ax0d2vrdwY"
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,16 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'analysis' from '/home/cat/monod/src/monod/analysis.py'>"
+       "<module 'mminference' from '/home/cat/monod/src/monod/mminference.py'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,13 +320,14 @@
     "\n",
     "sys.path.insert(0, '/home/cat/monod/src/monod')\n",
     "\n",
-    "import extract_data, cme_toolbox, inference, analysis\n",
+    "import extract_data, cme_toolbox, inference, analysis, mminference\n",
     "import importlib\n",
     "\n",
     "importlib.reload(extract_data)\n",
     "importlib.reload(inference)\n",
     "importlib.reload(cme_toolbox)\n",
-    "importlib.reload(analysis)"
+    "importlib.reload(analysis)\n",
+    "importlib.reload(mminference)"
    ]
   },
   {
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -349,9 +350,40 @@
       "If your anndata layers have different names, please give a modality dictionary of the form: modality_name_dict  = {'spliced':your_spliced_layer_name, 'unspliced':your_unspliced_layer_name} \n",
       "INFO:root:Directory new_gaba already exists.\n",
       "INFO:root:Beginning data extraction.\n",
-      "INFO:root:Dataset: new_gaba\n",
+      "INFO:root:Dataset: new_gaba\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cat/.conda/envs/myenv/lib/python3.12/site-packages/anndata/_core/anndata.py:1820: UserWarning: Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n",
+      "  utils.warn_names_duplicates(\"var\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "is sparse\n",
-      "INFO:root:Added lengths\n",
+      "INFO:root:Added lengths\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cat/.conda/envs/myenv/lib/python3.12/site-packages/pandas/core/algorithms.py:522: DeprecationWarning: np.find_common_type is deprecated.  Please use `np.result_type` or `np.promote_types`.\n",
+      "See https://numpy.org/devdocs/release/1.25.0-notes.html and the docs for more information.  (Deprecated NumPy 1.25)\n",
+      "  common = np.find_common_type([values.dtype, comps_array.dtype], [])\n",
+      "/home/cat/.conda/envs/myenv/lib/python3.12/site-packages/pandas/core/arraylike.py:402: RuntimeWarning: divide by zero encountered in log10\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "INFO:root:728 cells detected.\n",
       "3578 genes retained after expression filter.\n",
       "INFO:root:0 random genes selected.\n",
@@ -366,16 +398,28 @@
       "INFO:root:Global inference parameters stored to new_gaba/Bursty_Poisson_1x1/parameters.pr.\n",
       "INFO:root:Global inference parameters set.\n",
       "INFO:root:Starting non-parallelized grid scan.\n",
+      "INFO:root:M Step Initial Run: \n",
+      "INFO:root:EM Epoch 1/2: \n",
+      "mstep self.weights:  [0.2371692  0.29754231 0.22308812 0.24220037]\n",
+      "Q Function:  -12447.908645054828\n",
+      "\n",
+      "INFO:root:EM Epoch 2/2: \n",
+      "mstep self.weights:  [0.21887677 0.36963899 0.18682205 0.22466219]\n",
+      "Q Function:  -12092.790838268476\n",
+      "\n",
       "INFO:root:Non-parallelized grid scan complete.\n",
-      "INFO:root:All grid point data cleaned from disk.\n",
-      "INFO:root:Directory new_gaba/Bursty_Poisson_1x1/analysis_figures already exists.\n",
-      "INFO:root:Grid scan results stored to new_gaba/Bursty_Poisson_1x1/grid_scan_results.res.\n",
-      "INFO:root:Runtime: 0.4 seconds.\n",
+      "INFO:root:Directory new_gaba/Bursty_Poisson_1x1/analysis_figures_0 already exists.\n",
+      "INFO:root:Directory new_gaba/Bursty_Poisson_1x1/analysis_figures_1 already exists.\n",
+      "INFO:root:Directory new_gaba/Bursty_Poisson_1x1/analysis_figures_2 already exists.\n",
+      "INFO:root:Directory new_gaba/Bursty_Poisson_1x1/analysis_figures_3 already exists.\n",
+      "INFO:root:Runtime: 1.8 seconds.\n",
       "INFO:root:Grid points fit.\n",
       "INFO:root:Optimal parameters found.\n",
+      "INFO:root:Optimal parameters found.\n",
+      "INFO:root:Optimal parameters found.\n",
+      "INFO:root:Optimal parameters found.\n",
       "INFO:root:Optimal parameters saved.\n",
-      "Layers with keys: unspliced, spliced\n",
-      "['unspliced', 'spliced']\n",
+      "AICs [4969.55975985 2381.88161067 2418.30101503 8092.47208307 3908.2894229 ]\n",
       "INFO:root:AIC values calculated.\n",
       "INFO:root:Computing local Hessian.\n",
       "INFO:root:Starting non-parallelized Hessian computation.\n"
@@ -385,8 +429,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/cat/monod/src/monod/inference.py:124: ImplicitModificationWarning: Trying to modify attribute `.var` of view, initializing view as actual.\n",
-      "  monod_adata.var['param_' + param_name] = param_values\n"
+      "/home/cat/monod/src/monod/inference.py:171: ImplicitModificationWarning: Trying to modify attribute `.var` of view, initializing view as actual.\n",
+      "  monod_adata.var[\"cluster_{}_param_\".format(j) + param_name] = param_values\n"
      ]
     },
     {
@@ -394,8 +438,29 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Non-parallelized Hessian computation complete.\n",
-      "INFO:root:Standard error of the MLE computation complete. Runtime: 3.4 seconds.\n",
+      "INFO:root:Standard error of the MLE computation complete. Runtime: 0.9 seconds.\n",
+      "INFO:root:Computing local Hessian.\n",
+      "INFO:root:Starting non-parallelized Hessian computation.\n",
+      "INFO:root:Non-parallelized Hessian computation complete.\n",
+      "INFO:root:Standard error of the MLE computation complete. Runtime: 1.6 seconds.\n",
+      "INFO:root:Computing local Hessian.\n",
+      "INFO:root:Starting non-parallelized Hessian computation.\n",
+      "INFO:root:Non-parallelized Hessian computation complete.\n",
+      "INFO:root:Standard error of the MLE computation complete. Runtime: 1.3 seconds.\n",
+      "INFO:root:Computing local Hessian.\n",
+      "INFO:root:Starting non-parallelized Hessian computation.\n",
+      "INFO:root:Non-parallelized Hessian computation complete.\n",
+      "INFO:root:Gene 2 gives negative stdev; replaced with mean. (Search converged to local minimum?)\n",
+      "INFO:root:Standard error of the MLE computation complete. Runtime: 0.7 seconds.\n",
       "INFO:root:Uncertainties per gene calculated.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cat/monod/src/monod/mminference.py:2141: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  sigma[gene_index, :] = np.sqrt(np.diag(hess_inv)) / np.sqrt(\n"
      ]
     }
    ],
@@ -427,12 +492,13 @@
     "gaba_adata = inference.perform_inference(gaba_adata, fitmodel, n_genes=5, seed=5, genes_to_fit=demo_genes,\n",
     "            phys_lb=lb, phys_ub=ub, gridsize=grid, samp_lb=samp_lb, samp_ub=samp_ub, \n",
     "            gradient_params = {'max_iterations':5,'init_pattern':'moments','num_restarts':1}, \n",
-    "                                         transcriptome_filepath=transcriptome_filepath, poisson_average_log_length=5, dataset_string='new_gaba', viz=False) "
+    "                                         transcriptome_filepath=transcriptome_filepath, poisson_average_log_length=5, dataset_string='new_gaba', viz=False,\n",
+    "                                         num_cores=1, mek_means_params=(4, 2)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +529,7 @@
       "INFO:root:All grid point data cleaned from disk.\n",
       "INFO:root:Directory glu_example/Bursty_Poisson_1x1/analysis_figures already exists.\n",
       "INFO:root:Grid scan results stored to glu_example/Bursty_Poisson_1x1/grid_scan_results.res.\n",
-      "INFO:root:Runtime: 0.6 seconds.\n",
+      "INFO:root:Runtime: 0.2 seconds.\n",
       "INFO:root:Grid points fit.\n",
       "INFO:root:Optimal parameters found.\n",
       "INFO:root:Optimal parameters saved.\n",
@@ -478,7 +544,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/cat/monod/src/monod/inference.py:124: ImplicitModificationWarning: Trying to modify attribute `.var` of view, initializing view as actual.\n",
+      "/home/cat/monod/src/monod/inference.py:164: ImplicitModificationWarning: Trying to modify attribute `.var` of view, initializing view as actual.\n",
       "  monod_adata.var['param_' + param_name] = param_values\n"
      ]
     },
@@ -487,7 +553,7 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Non-parallelized Hessian computation complete.\n",
-      "INFO:root:Standard error of the MLE computation complete. Runtime: 5.3 seconds.\n",
+      "INFO:root:Standard error of the MLE computation complete. Runtime: 1.8 seconds.\n",
       "INFO:root:Uncertainties per gene calculated.\n"
      ]
     },
@@ -533,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1188,9 +1254,9 @@
      "output_type": "stream",
      "text": [
       "INFO:root:P-value threshold: 0.05, Adjusted P-value threshold:0.05, Hellinger Threshold:0.05\n",
-      "INFO:root:Chi-square computation complete. Rejected 2 genes out of 5. Runtime: 0.1 seconds.\n",
+      "INFO:root:Chi-square computation complete. Rejected 2 genes out of 5. Runtime: 0.0 seconds.\n",
       "INFO:root:P-value threshold: 0.05, Adjusted P-value threshold:0.05, Hellinger Threshold:0.05\n",
-      "INFO:root:Chi-square computation complete. Rejected 1 genes out of 5. Runtime: 0.1 seconds.\n"
+      "INFO:root:Chi-square computation complete. Rejected 1 genes out of 5. Runtime: 0.0 seconds.\n"
      ]
     },
     {
@@ -1390,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
