combine gz files

--- a/Monod_demo_new.ipynb
+++ b/Monod_demo_new.ipynb
@@ -48,20 +48,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "1AQA8mxjqbvX",
-    "outputId": "eff6e961-b5b6-460a-a494-2c1a34679da4"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# # %%capture\n",
-    "# # !pip install -i https://test.pypi.org/simple/ -U --extra-index-url https://pypi.org/simple   monod  \n",
-    "# # !pip install -i https://pypi.org/simple/  monod  \n",
-    "# !pip install monod"
+    "# #Install Monod package which contains the meK-Means method\n",
+    "# !pip install monod\n",
+    "\n",
+    "!git clone https://github.com/pachterlab/monod.git\n",
+    "\n",
+    "%cd /content/monod\n",
+    "!git checkout anndata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q ./\n",
+    "!pip install -q -r /content/monod/src/monod.egg-info/requires.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.insert(0, '/content/monod/src/monod')\n",
+    "import extract_data, cme_toolbox, inference, analysis, mminference"
    ]
   },
   {
@@ -126,8 +143,18 @@
    },
    "outputs": [],
    "source": [
-    "# ! git clone https://github.com/pachterlab/monod_examples.git"
+    "! git clone https://github.com/pachterlab/monod_examples.git\n",
+    "\n",
+    "%cd /content/monod_examples\n",
+    "!git checkout anndata"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -259,6 +286,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_chunks(input_dir, output_file):\n",
+    "    \"\"\"Combine compressed chunks back into a single h5ad file\"\"\"\n",
+    "    # Get all chunk files sorted by name\n",
+    "    chunk_files = sorted(Path(input_dir).glob('chunk_*.gz'))\n",
+    "    \n",
+    "    # Combine chunks\n",
+    "    combined_data = bytes()\n",
+    "    for chunk_file in chunk_files:\n",
+    "        with open(chunk_file, 'rb') as f:\n",
+    "            compressed_chunk = f.read()\n",
+    "        chunk = decompress_chunk(compressed_chunk)\n",
+    "        combined_data += chunk\n",
+    "        print(f'Processed chunk: {chunk_file}')\n",
+    "    \n",
+    "    # Write combined data to temporary file\n",
+    "    with open('temp_combined.h5ad', 'wb') as f:\n",
+    "        f.write(combined_data)\n",
+    "    \n",
+    "    # Load and save as AnnData to ensure proper format\n",
+    "    adata = ad.read_h5ad('temp_combined.h5ad')\n",
+    "    adata.write(output_file)#, compression='gzip')\n",
+    "    \n",
+    "    # Clean up temporary file\n",
+    "    os.remove('temp_combined.h5ad')\n",
+    "    print(f'Successfully created combined file: {output_file}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "hfprorcN13LY"
@@ -341,44 +408,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cat/.conda/envs/myenv/lib/python3.12/site-packages/anndata/_core/anndata.py:1820: UserWarning: Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n",
+      "  utils.warn_names_duplicates(\"var\")\n"
+     ]
+    }
+   ],
    "source": [
-    "gaba_adata = anndata.read_h5ad('./allen_C01_gaba.h5ad')\n",
-    "# gaba_adata = anndata.read_h5ad('./gaba_example.h5ad')\n",
-    "\n",
-    "# N.B. The adata should have var_names as gene names which match the transcriptome.\n",
-    "try:\n",
-    "    gene_names = gaba_adata.var['gene_name'].astype(str)\n",
-    "    gaba_adata.var_names = gene_names\n",
-    "except:\n",
-    "    pass\n",
-    "\n",
-    "gaba_adata.var_names_make_unique()"
+    "glu_adata = anndata.read_h5ad('./glu_example.h5ad')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glu_adata.write_h5ad(filename='./glu_example.gz', compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "AnnData object with n_obs × n_vars = 728 × 32285\n",
-       "    obs: 'barcode'\n",
-       "    var: 'gene_name'\n",
-       "    layers: 'matrix', 'spliced', 'unspliced'"
-      ]
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cat/.conda/envs/myenv/lib/python3.12/site-packages/anndata/_core/anndata.py:1820: UserWarning: Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n",
+      "  utils.warn_names_duplicates(\"var\")\n"
+     ]
     }
    ],
    "source": [
-    "gaba_adata"
+    "# gaba_adata = anndata.read_h5ad('./allen_C01_gaba.h5ad')\n",
+    "gaba_adata = anndata.read_h5ad('./gaba_example.h5ad')\n",
+    "\n",
+    "# # N.B. The adata should have var_names as gene names which match the transcriptome.\n",
+    "# try:\n",
+    "#     gene_names = gaba_adata.var['gene_name'].astype(str)\n",
+    "#     gaba_adata.var_names = gene_names\n",
+    "# except:\n",
+    "#     pass\n",
+    "\n",
+    "# gaba_adata.var_names_make_unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gaba_adata.write_h5ad(filename='./gaba_example.gz', compression='gzip')"
    ]
   },
   {
