More .ipynb typo fixes

--- a/Monod_demo_new.ipynb
+++ b/Monod_demo_new.ipynb
@@ -67,7 +67,7 @@
     "!git clone https://github.com/pachterlab/monod.git\n",
     "\n",
     "%cd monod\n",
-    "!pip install -q ./\\n\n",
+    "!pip install -q ./\n",
     "!pip install -q -r /content/monod/src/monod.egg-info/requires.txt\n",
     "%cd ../"
    ]
